--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ body {
 	z-index: 1;
 }
 		</style>
-		<link id="-gd-engine-icon" rel="icon" type="image/png" href="Curve_alpha.icon.png" />
-<link rel="apple-touch-icon" href="Curve_alpha.apple-touch-icon.png"/>
+		<link id="-gd-engine-icon" rel="icon" type="image/png" href="curve_alpha_fix.icon.png" />
+<link rel="apple-touch-icon" href="curve_alpha_fix.apple-touch-icon.png"/>
 
 	</head>
 	<body>
@@ -90,14 +90,14 @@ body {
 		</noscript>
 
 		<div id="status">
-			<img id="status-splash" src="Curve_alpha.png" alt="">
+			<img id="status-splash" src="curve_alpha_fix.png" alt="">
 			<progress id="status-progress"></progress>
 			<div id="status-notice"></div>
 		</div>
 
-		<script src="Curve_alpha.js"></script>
+		<script src="curve_alpha_fix.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"Curve_alpha","experimentalVK":false,"fileSizes":{"Curve_alpha.pck":163376,"Curve_alpha.wasm":43016933},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"curve_alpha_fix","experimentalVK":false,"fileSizes":{"curve_alpha_fix.pck":166176,"curve_alpha_fix.wasm":43016933},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
