--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ body {
 	z-index: 1;
 }
 		</style>
-		<link id="-gd-engine-icon" rel="icon" type="image/png" href="curve_alpha_fix_6.icon.png" />
-<link rel="apple-touch-icon" href="curve_alpha_fix_6.apple-touch-icon.png"/>
+		<link id="-gd-engine-icon" rel="icon" type="image/png" href="CODEBREAKER_1.icon.png" />
+<link rel="apple-touch-icon" href="CODEBREAKER_1.apple-touch-icon.png"/>
 
 	</head>
 	<body>
@@ -90,14 +90,14 @@ body {
 		</noscript>
 
 		<div id="status">
-			<img id="status-splash" src="curve_alpha_fix_6.png" alt="">
+			<img id="status-splash" src="CODEBREAKER_1.png" alt="">
 			<progress id="status-progress"></progress>
 			<div id="status-notice"></div>
 		</div>
 
-		<script src="curve_alpha_fix_6.js"></script>
+		<script src="CODEBREAKER_1.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"curve_alpha_fix_6","experimentalVK":false,"fileSizes":{"curve_alpha_fix_6.pck":166816,"curve_alpha_fix_6.wasm":43016933},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"CODEBREAKER_1","experimentalVK":false,"fileSizes":{"CODEBREAKER_1.pck":219504,"CODEBREAKER_1.wasm":43016933},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
